Issue #24348: Drop superfluous increfs/decrefs.